# GearCalc-3Stage

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: GearDimensionTable.tsx  GearTrainPreview.tsx  InputMatrix.tsx  MotorInputPanel.tsx  ResultSummary.tsx  RiskWarnings.tsx  StageInputCard.tsx  StageResultTable.tsx
src/lib/: gearCalculations.ts
src/types/: gear.ts
